<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/padding_average"
        android:text="@string/sign_in_button"
        style="@style/regular_buttons"/>

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/padding_average"
        android:text="@string/create_account_button"
        style="@style/regular_buttons"/>


    <Button
        android:id="@+id/btnAnonymousAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/padding_average"
        android:text="@string/authentication_label"
        style="@style/regular_buttons"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnSignInGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_centerHorizontal="true">
    </com.google.android.gms.common.SignInButton>


    <TextView
        android:id="@+id/text_info"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/small_height"
        android:text="@string/success_message_authentication"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        style="@style/info_textviews"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/long_height"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/button_create_room"
            android:layout_width="@dimen/small_width"
            android:layout_height="@dimen/small_height"
            android:layout_margin="@dimen/margin_extra_large"
            android:text="@string/create_room_label"
            android:padding="@dimen/padding_small"
            android:visibility="gone"
            style="@style/regular_buttons"/>

        <Button
            android:id="@+id/button_existing_room"
            android:layout_width="@dimen/small_width"
            android:layout_height="@dimen/small_height"
            android:layout_margin="@dimen/margin_extra_large"
            android:text="@string/existing_room_label"
            android:padding="@dimen/padding_small"
            android:visibility="gone"
            style="@style/regular_buttons"/>
    </LinearLayout>

</LinearLayout>
